Fixed navbar buttons and elements alignment

--- a/browse/static/browse/scss/base.scss
+++ b/browse/static/browse/scss/base.scss
@@ -41,7 +41,7 @@ $highlight: #f49832;
 .small_logo {
     width: 50px;
     height: 70px;
-    margin-top: -10px;
+    margin-top: -3px;
     margin-right: 40px;
 }
 
@@ -50,6 +50,14 @@ $highlight: #f49832;
     height: 300px;
     display: block;
     margin: 0 auto;
+}
+
+.nav-buttons {
+  padding-top: 3px;
+}
+
+.profile-button {
+  padding-top: 24px;
 }
 
 .vote-button {
